Bug 1495892 - Aggregates in c++2a can't have deleted ctors. r=dholbert

GLContextSymbols previously had a deleted default ctor to prevent accidentally leaving its members uninitialized, instead of zeroing with aggregate initialization.

Differential Revision: https://phabricator.services.mozilla.com/D8796